--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
     <h2>Animals Adopted</h2>
     <div class="adopted-gallery">
         <div class="adopted-item">
-            <img src="https://via.placeholder.com/200" alt="Animal 1">
+            <img src="Animal 1.png" alt="Animal 1">
             <p>Max</p>
         </div>
         <div class="adopted-item">
-            <img src="https://via.placeholder.com/200" alt="Animal 2">
+            <img src="Animal 2.png" alt="Animal 2">
             <p>Bella</p>
         </div>
         <div class="adopted-item">
-            <img src="https://via.placeholder.com/200" alt="Animal 3">
+            <img src="Animal 3.png" alt="Animal 3">
             <p>Charlie</p>
         </div>
         <div class="adopted-item">
-            <img src="https://via.placeholder.com/200" alt="Animal 4">
+            <img src="Animal 4.png" alt="Animal 4">
             <p>Luna</p>
         </div>
         <div class="adopted-item">
-            <img src="https://via.placeholder.com/200" alt="Animal 5">
+            <img src="Animal 5.png" alt="Animal 5">
             <p>Buddy</p>
         </div>
         <div class="adopted-item">
