--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 <section id="animals-adopted">
     <h2>Animals Adopted</h2>
     <div class="adopted-gallery">
-        <div class="adopted-item">
+          <div class="adopted-item">
             <img src="Animal 1.png" alt="Animal 1">
-            <p>Max</p>
+            <p>Bella</p>
         </div>
         <div class="adopted-item">
             <img src="Animal 2.png" alt="Animal 2">
