--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
             <p>Buddy</p>
         </div>
         <div class="adopted-item">
-            <img src="https://via.placeholder.com/200" alt="Animal 6">
+            <img src="Animal 6.png" alt="Animal 6">
             <p>Daisy</p>
         </div>
        <div class="adopted-item">
-            <img src="https://via.placeholder.com/200" alt="Animal 7">
+            <img src="Animal 7.png" alt="Animal 7">
             <p>la</p>
         </div>
        <div class="adopted-item">
-            <img src="https://via.placeholder.com/200" alt="Animal 8">
+            <img src="Animal 8.png" alt="Animal 8">
             <p>al</p>
         </div>
       
