--- a/index.html
+++ b/index.html
@@ -51,35 +51,35 @@
     <div class="adopted-gallery">
           <div class="adopted-item">
             <img src="Animal 1 .png" alt="Animal 1">
-            <p>Bella</p>
+            <p>Muffin</p>
         </div>
         <div class="adopted-item">
             <img src="Animal 2.png" alt="Animal 2">
-            <p>Bella</p>
+            <p>Twinkle</p>
         </div>
         <div class="adopted-item">
             <img src="Animal 3.png" alt="Animal 3">
-            <p>Charlie</p>
+            <p>Mega</p>
         </div>
         <div class="adopted-item">
             <img src="Animal 4.png" alt="Animal 4">
-            <p>Luna</p>
+            <p>Peanut</p>
         </div>
         <div class="adopted-item">
             <img src="Animal 5.png" alt="Animal 5">
-            <p>Buddy</p>
+            <p>Tater Tot</p>
         </div>
         <div class="adopted-item">
             <img src="Animal 6.png" alt="Animal 6">
-            <p>Daisy</p>
+            <p>Mochi</p>
         </div>
        <div class="adopted-item">
             <img src="Animal 7.png" alt="Animal 7">
-            <p>la</p>
+            <p>Pookie</p>
         </div>
        <div class="adopted-item">
             <img src="Animal 8.png" alt="Animal 8">
-            <p>al</p>
+            <p>Waffles</p>
         </div>
       
     </div>
