--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
        <div class="adopted-item">
             <img src="Animal 7.png" alt="Animal 7">
-            <p>Pookie</p>
+            <p>Sparkles</p>
         </div>
        <div class="adopted-item">
             <img src="Animal 8.png" alt="Animal 8">
@@ -161,33 +161,33 @@
     <p>Location: NY</p>
     <div class="cat-grid">
         <div class="cat-box">
-            <img src="https://placehold.co/100x100" alt="Cat 1">
-            <h3>Whiskers</h3>
+            <img src="cat1.png" alt="Cat 1">
+            <h3>Cinnamon</h3>
             <p>Playful and affectionate.</p>
         </div>
         <div class="cat-box">
-            <img src="https://placehold.co/100x100" alt="Cat 2">
-            <h3>Shadow</h3>
+            <img src="cat2.png" alt="Cat 2">
+            <h3>Bubbles</h3>
             <p>Loves quiet naps and snuggles.</p>
         </div>
         <div class="cat-box">
-            <img src="https://placehold.co/100x100" alt="Cat 3">
+            <img src="cat3.png" alt="Cat 3">
             <h3>Mittens</h3>
             <p>Curious and adventurous.</p>
         </div>
         <div class="cat-box">
-            <img src="https://placehold.co/100x100" alt="Cat 4">
-            <h3>Snowball</h3>
+            <img src="cat4.png" alt="Cat 4">
+            <h3>Marshmallow</h3>
             <p>Sweet and gentle nature.</p>
         </div>
         <div class="cat-box">
-            <img src="https://placehold.co/100x100" alt="Cat 5">
+            <img src="cat5.png" alt="Cat 5">
             <h3>Boots</h3>
             <p>Full of energy and mischief.</p>
         </div>
         <div class="cat-box">
-            <img src="https://placehold.co/100x100" alt="Cat 6">
-            <h3>Luna</h3>
+            <img src="cat6.png" alt="Cat 6">
+            <h3>Socks</h3>
             <p>Shy but loving once she warms up.</p>
         </div>
     </div>
