--- a/index.html
+++ b/index.html
@@ -162,17 +162,17 @@
     <div class="cat-grid">
         <div class="cat-box">
             <img src="cat1.png" alt="Cat 1">
-            <h3>Cinnamon</h3>
+            <h3 class="catnames">Cinnamon</h3>
             <p>Playful and affectionate.</p>
         </div>
         <div class="cat-box">
             <img src="cat2.png" alt="Cat 2">
-            <h3>Bubbles</h3>
+            <h3 class="catnames">Bubbles</h3>
             <p>Loves quiet naps and snuggles.</p>
         </div>
         <div class="cat-box">
             <img src="cat3.png" alt="Cat 3">
-            <h3>Mittens</h3>
+            <h3 class="catnames">Mittens</h3>
             <p>Curious and adventurous.</p>
         </div>
         <div class="cat-box">
