--- a/index.html
+++ b/index.html
@@ -198,34 +198,34 @@
     <p>Location: NY</p>
     <div class="dog-grid">
         <div class="dog-box">
-            <img src="https://placehold.co/100x100" alt="Dog 1">
-            <h3>Whiskers</h3>
-            <p>Playful and affectionate.</p>
+            <img src="dog1.png" alt="Dog 1">
+            <h3>Coco</h3>
+            <p>Sweet and always by your side.</p>
         </div>
         <div class="dog-box">
-            <img src="https://placehold.co/100x100" alt="Dog 2">
-            <h3>Shadow</h3>
-            <p>Loves quiet naps and snuggles.</p>
+            <img src="dog12.png" alt="Dog 2">
+            <h3>Cupcake</h3>
+            <p>Loyal and loves attention.</p>
         </div>
         <div class="dog-box">
-            <img src="https://placehold.co/100x100" alt="Dog 3">
-            <h3>Mittens</h3>
-            <p>Curious and adventurous.</p>
+            <img src="dog3.png" alt="Dog 3">
+            <h3>Buttons</h3>
+            <p>Curious and loves to explore.</p>
         </div>
         <div class="dog-box">
-            <img src="https://placehold.co/100x100" alt="Dog 4">
-            <h3>Snowball</h3>
-            <p>Sweet and gentle nature.</p>
+            <img src="dog4.png" alt="Dog 4">
+            <h3>Peaches</h3>
+            <p>Friendly, with a little sass.</p>
         </div>
         <div class="dog-box">
-            <img src="https://placehold.co/100x100" alt="Dog 5">
-            <h3>Boots</h3>
-            <p>Full of energy and mischief.</p>
+            <img src="dog5.png" alt="Dog 5">
+            <h3>Twix</h3>
+            <p>Gentle and loves belly rubs.</p>
         </div>
         <div class="dog-box">
-            <img src="https://placehold.co/100x100" alt="Dog 6">
-            <h3>Luna</h3>
-            <p>Shy but loving once she warms up.</p>
+            <img src="dog6.png" alt="Dog 6">
+            <h3>Churro</h3>
+            <p>Independent, but loves company.</p>
         </div>
     </div>
 </section>
