--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
 <section id="animals-adopted">
-    <h2>Animals Adopted</h2>
+    <h2>Animals Adopted This Week</h2>
     <div class="adopted-gallery">
           <div class="adopted-item">
             <img src="Animal 1 .png" alt="Animal 1">
