--- a/index.html
+++ b/index.html
@@ -236,19 +236,19 @@
     <p>Location: NY</p>
     <div class="other-grid">
         <div class="other-box">
-            <img src="https://placehold.co/100x100" alt="Dog 1">
-            <h3>Whiskers</h3>
-            <p>Playful and affectionate.</p>
+            <img src="bunny1.jpeg">
+            <h3>Biscuit</h3>
+            <p>Hoppy and snuggly.</p>
         </div>
         <div class="other-box">
-            <img src="https://placehold.co/100x100" alt="Dog 2">
-            <h3>Shadow</h3>
-            <p>Loves quiet naps and snuggles.</p>
+            <img src="bunny2.jpeg">
+            <h3>Mat</h3>
+            <p>Mischievous</p>
         </div>
         <div class="other-box">
-            <img src="https://placehold.co/100x100" alt="Dog 3">
-            <h3>Mittens</h3>
-            <p>Curious and adventurous.</p>
+            <img src="bunny3.jpeg">
+            <h3>Maple</h3>
+            <p>Playful little fluff.</p>
         </div>
         <div class="other-box">
             <img src="https://placehold.co/100x100" alt="Dog 4">
