--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <ul class="dropdown-content">
                     <li><a href="#cats">Cats</a></li>
                     <li><a href="#dogs">Dogs</a></li>
-                    <li><a href="#other">Other</a></li>
+                    <li><a href="#other">Bunnies & Birds</a></li>
                 </ul>
             </li>
             <li><a href="#contact-info">Contact</a></li>
