--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         <div class="other-box">
             <img src="bunny2.jpeg">
             <h3>Mat</h3>
-            <p>Mischievous</p>
+            <p>Mischievous.</p>
         </div>
         <div class="other-box">
             <img src="bunny3.jpeg">
@@ -251,19 +251,19 @@
             <p>Playful little fluff.</p>
         </div>
         <div class="other-box">
-            <img src="https://placehold.co/100x100" alt="Dog 4">
-            <h3>Snowball</h3>
-            <p>Sweet and gentle nature.</p>
+            <img src="bird1.jpeg">
+            <h3>Chirpy</h3>
+            <p>Perky and warm-hearted.</p>
         </div>
         <div class="other-box">
-            <img src="https://placehold.co/100x100" alt="Dog 5">
-            <h3>Boots</h3>
-            <p>Full of energy and mischief.</p>
+            <img src="bird2.jpeg">
+            <h3>Peep</h3>
+            <p>Loving little chirper.</p>
         </div>
         <div class="other-box">
-            <img src="https://placehold.co/100x100" alt="Dog 6">
-            <h3>Luna</h3>
-            <p>Shy but loving once she warms up.</p>
+            <img src="bird3.jpeg">
+            <h3>Sunny</h3>
+            <p>Soft and chatty.</p>
         </div>
     </div>
 </section>
