--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
 <nav>
     <ul>
         <li><a href="#home">Home</a></li>
-            <li><a href="#volunteer-info">Volunteer</a></li>
-            <li class="dropdown">
+           <li class="dropdown">
+    <a href="#">Info</a>
+    <ul class="dropdown-content">
+        <li><a href="#volunteer-info">Volunteer</a></li>
+        <li><a href="#hours">Hours</a></li>
+        <li><a href="#staff">Staff</a></li>
+        <li><a href="#philosophy">Our Philosophy</a></li>
+    </ul>
+</li>
+ <li class="dropdown">
                 <a href="#">Animals</a>
                 <ul class="dropdown-content">
                     <li><a href="#cats">Cats</a></li>
