--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <ul class="dropdown-content">
         <li><a href="#volunteer-info">Volunteer</a></li>
         <li><a href="#hours">Hours</a></li>
-        <li><a href="#staff">Staff</a></li>
-        <li><a href="#philosophy">Our Philosophy</a></li>
+        <li><a href="#staff">Meet Our Team</a></li>
+        <li><a href="#philosophy">Mission</a></li>
     </ul>
 </li>
  <li class="dropdown">
