--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </section>
 
 <section>
-    <h2>Contact Information</h2>
+    <h2 id="#contact-info">Contact Information</h2>
     <table>
         <tr>
             <td id="contact"><strong>Address:</strong></td>
@@ -154,7 +154,7 @@
     </section>
 
     <section id="volunteer-info">
-        <h2>How to Become a Volunteer</h2>
+        <h2 id="volunteer-info">How to Become a Volunteer</h2>
         <p>We can always use volunteers to help keep our shelter open! Volunteers are needed to bathe and groom animals, play with pets to help them socialize and keep them happy, clean kennels and screening rooms, and help with administrative tasks in the office.</p>
         <h3>Steps to become a volunteer:</h3>
         <ol>
