--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li><a href="#other">Bunnies & Birds</a></li>
                 </ul>
             </li>
-            <li><a href="#contact-info">Contact</a></li>
+            <li><a href="contact-info">Contact</a></li>
         </ul>
     </nav>
   
