--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
 <nav>
     <ul>
         <li><a href="#home">Home</a></li>
-           <li class="dropdown">
-    <a href="#">Info</a>
-    <ul class="dropdown-content">
-        <li><a href="#volunteer-info">Volunteer</a></li>
-        <li><a href="#hours">Hours</a></li>
-        <li><a href="#staff">Meet Our Team</a></li>
-        <li><a href="#philosophy">Mission</a></li>
+        <li class="dropdown">
+            <a href="#">Info</a>
+            <ul class="dropdown-content">
+                <li><a href="#volunteer-info">Volunteer</a></li>
+                <li><a href="#hours">Hours</a></li>
+                <li><a href="#staff">Meet Our Team</a></li>
+                <li><a href="#philosophy">Mission</a></li>
+            </ul>
+        </li>
+        <li class="dropdown">
+            <a href="#">Animals</a>
+            <ul class="dropdown-content">
+                <li><a href="#cats">Cats</a></li>
+                <li><a href="#dogs">Dogs</a></li>
+                <li><a href="#other">Bunnies & Birds</a></li>
+            </ul>
+        </li>
+        <li><a href="#contact-info">Contact</a></li>
     </ul>
-</li>
- <li class="dropdown">
-                <a href="#">Animals</a>
-                <ul class="dropdown-content">
-                    <li><a href="#cats">Cats</a></li>
-                    <li><a href="#dogs">Dogs</a></li>
-                    <li><a href="#other">Bunnies & Birds</a></li>
-                </ul>
-            </li>
-            <li><a href="contact-info">Contact</a></li>
-        </ul>
-    </nav>
+</nav>
   
   <div id="logo">
     <img src="logologo.png">
@@ -94,8 +94,8 @@
     </div>
 </section>
 
-<section>
-    <h2 id="#contact-info">Contact Information</h2>
+<section id="contact-info">
+    <h2>Contact Information</h2>
     <table>
         <tr>
             <td id="contact"><strong>Address:</strong></td>
@@ -148,8 +148,8 @@
 
 
 
-    <section id="our-philosophy">
-        <h2 id="#philosophy">Our Philosophy</h2>
+   <section id="philosophy">
+    <h2>Our Philosophy</h2>
         <p>At Loved Pets Animal Rescue, we believe all animals deserve a chance to find a loving forever home. We provide initial veterinary care to rescued animals, then work to match each animal with a human family to love them and keep them safe forever. All animals are screened for diseases upon arrival, washed and groomed, and then added to our website for adoptive families to see. All potential adoptive families are also screened for adoption history, household lifestyle, and commitment to providing a safe and loving home.</p>
     </section>
 
