--- a/index.html
+++ b/index.html
@@ -145,9 +145,56 @@
         </tr>
     </table>
 </section>
+<section id="staff">
+    <h2>Meet Our Team</h2>
+    
+    <!-- Top-level team members -->
+    <div class="team-gallery">
+        <div class="team-member">
+            <img src="https://via.placeholder.com/200" alt="Senior Manager">
+            <p class="teamname"><strong>Jane Doe</strong></p>
+            <p class="teamtitle">Senior Manager</p>
+        </div>
+        <div class="team-member">
+            <img src="https://via.placeholder.com/200" alt="Senior Pet Behavior Specialist">
+            <p class="teamname"><strong>John Smith</strong></p>
+            <p class="teamtitle">Senior Pet Behavior Specialist</p>
+        </div>
+        <div class="team-member">
+            <img src="https://via.placeholder.com/200" alt="Head Veterinarian">
+            <p class="teamname"><strong>Alex Brown</strong></p>
+            <p class="teamtitle">Head Veterinarian</p>
+        </div>
+    </div>
+    
+<div class="team-container">
+    <!-- Left side with the list -->
+    <div class="other-members">
+        <h3 id="otherteamtitle">Other Team Members</h3>
+        <ul>
+            <li><strong>Emily White</strong>, Volunteer Coordinator</li>
+            <li><strong>Chris Green</strong>, Adoption Counselor</li>
+            <li><strong>Samantha Blue</strong>, Animal Care Specialist</li>
+            <li><strong>Michael Gray</strong>, Administrative Assistant</li>
+            <li><strong>Sophia Gold</strong>, Event Coordinator</li>
+            <li><strong>Jacob Cyan</strong>, Shelter Maintenance Lead</li>
+            <li><strong>Olivia Amber</strong>, Veterinary Assistant</li>
+            <li><strong>Liam Brown</strong>, Animal Grooming Volunteer</li>
+            <li><strong>Emma Violet</strong>, Kennel Cleaning Volunteer</li>
+            <li><strong>Noah Indigo</strong>, Dog Walker Volunteer</li>
+            <li><strong>Ava Scarlet</strong>, Cat Socialization Volunteer</li>
+            <li><strong>Mason Pearl</strong>, Food Preparation Volunteer</li>
+            <li><strong>Isabella Jade</strong>, Adoption Event Volunteer</li>
+            <li><strong>Ethan Opal</strong>, Pet Photography Volunteer</li>
+        </ul>
+    </div>
 
-
-
+    <!-- Right side with the image -->
+    <div class="team-image">
+        <img src="community.jpg">
+    </div>
+</div>
+</section>
    <section id="philosophy">
     <h2>Our Philosophy</h2>
         <p>At Loved Pets Animal Rescue, we believe all animals deserve a chance to find a loving forever home. We provide initial veterinary care to rescued animals, then work to match each animal with a human family to love them and keep them safe forever. All animals are screened for diseases upon arrival, washed and groomed, and then added to our website for adoptive families to see. All potential adoptive families are also screened for adoption history, household lifestyle, and commitment to providing a safe and loving home.</p>
