--- a/index.html
+++ b/index.html
@@ -151,18 +151,18 @@
     <!-- Top-level team members -->
     <div class="team-gallery">
         <div class="team-member">
-            <img src="https://via.placeholder.com/200" alt="Senior Manager">
-            <p class="teamname"><strong>Jane Doe</strong></p>
+            <img src="person1.png" alt="Senior Manager">
+            <p class="teamname"><strong>Karlene Doe</strong></p>
             <p class="teamtitle">Senior Manager</p>
         </div>
         <div class="team-member">
-            <img src="https://via.placeholder.com/200" alt="Senior Pet Behavior Specialist">
+            <img src="person2.png" alt="Senior Pet Behavior Specialist">
             <p class="teamname"><strong>John Smith</strong></p>
             <p class="teamtitle">Senior Pet Behavior Specialist</p>
         </div>
         <div class="team-member">
-            <img src="https://via.placeholder.com/200" alt="Head Veterinarian">
-            <p class="teamname"><strong>Alex Brown</strong></p>
+            <img src="person3.png" alt="Head Veterinarian">
+            <p class="teamname"><strong>Juliet West</strong></p>
             <p class="teamtitle">Head Veterinarian</p>
         </div>
     </div>
@@ -187,11 +187,6 @@
             <li><strong>Isabella Jade</strong>, Adoption Event Volunteer</li>
             <li><strong>Ethan Opal</strong>, Pet Photography Volunteer</li>
         </ul>
-    </div>
-
-    <!-- Right side with the image -->
-    <div class="team-image">
-        <img src="community.jpg">
     </div>
 </div>
 </section>
