--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
     <div class="team-gallery">
         <div class="team-member">
             <img src="person1.png" alt="Senior Manager">
-            <p class="teamname"><strong>Karlene Doe</strong></p>
+            <p class="teamname"><strong>Karlene Vale</strong></p>
             <p class="teamtitle">Senior Manager</p>
         </div>
         <div class="team-member">
             <img src="person2.png" alt="Senior Pet Behavior Specialist">
-            <p class="teamname"><strong>John Smith</strong></p>
+            <p class="teamname"><strong>Ethan Rowe</strong></p>
             <p class="teamtitle">Senior Pet Behavior Specialist</p>
         </div>
         <div class="team-member">
