--- a/index.html
+++ b/index.html
@@ -167,9 +167,7 @@
         </div>
     </div>
     
-<div class="team-container">
-    <!-- Left side with the list -->
-    <div class="other-members">
+  <div class="other-members">
         <h3 id="otherteamtitle">Other Team Members</h3>
         <ul>
             <li><strong>Emily White</strong>, Volunteer Coordinator</li>
@@ -187,6 +185,27 @@
             <li><strong>Isabella Jade</strong>, Adoption Event Volunteer</li>
             <li><strong>Ethan Opal</strong>, Pet Photography Volunteer</li>
         </ul>
+    </div>
+
+    <div class="our-impact">
+        <h3 id="impact-title">Our Impact</h3>
+        <ul>
+            <li>1,200 Animals Adopted in 2024</li>
+            <li>50+ Active Volunteers</li>
+            <li>10 Years Serving the Community</li>
+            <li>300+ Foster Homes Supported</li>
+            <li>5 Major Fundraising Events Annually</li>
+        </ul>
+        <!-- Placeholder Image -->
+        <img src="https://via.placeholder.com/400x800" alt="Impact Image" id="Impactimage" />
+    </div>
+
+    <!-- Right Column: Staff of the Week -->
+    <div class="staff-week">
+        <h3 id="staff-title">Staff of the Week</h3>
+        <img src="https://via.placeholder.com/200" alt="Staff of the Week" class="staff-photo" />
+        <p class="staff-name"><strong>John Doe</strong></p>
+        <p class="staff-thanks">Thank you for your incredible dedication and hard work!</p>
     </div>
 </div>
 </section>
