--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <li>5 Major Fundraising Events Annually</li>
         </ul>
         <!-- Placeholder Image -->
-        <img src="https://via.placeholder.com/400x800" alt="Impact Image" id="Impactimage" />
+        <img src="community.jpg" id="Impactimage" />
     </div>
 
     <!-- Right Column: Staff of the Week -->
