--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <p class="teamtitle">Head Veterinarian</p>
         </div>
     </div>
-    
+    <div class="team-container">
   <div class="other-members">
         <h3 id="otherteamtitle">Other Team Members</h3>
         <ul>
@@ -207,6 +207,7 @@
         <p class="staff-name"><strong>John Doe</strong></p>
         <p class="staff-thanks">Thank you for your incredible dedication and hard work!</p>
     </div>
+</div>
 </div>
 </section>
    <section id="philosophy">
