--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <!-- Right Column: Staff of the Week -->
     <div class="staff-week">
         <h3 id="staff-title">Staff of the Week</h3>
-        <img src="https://via.placeholder.com/200" alt="Staff of the Week" class="staff-photo" />
+        <img src="person4.png" alt="Staff of the Week" class="staff-photo" />
         <p class="staff-name"><strong>John Doe</strong></p>
         <p class="staff-thanks">Thank you for your incredible dedication and hard work!</p>
     </div>
