--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <div class="staff-week">
         <h3 id="staff-title">Staff of the Week</h3>
         <img src="person4.png" alt="Staff of the Week" class="staff-photo" />
-        <p class="staff-name"><strong>John Doe</strong></p>
+        <p class="staff-name"><strong>Alina Grey</strong></p>
         <p class="staff-thanks">Thank you for your incredible dedication and hard work!</p>
     </div>
 </div>
