making a longer thank u message

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <h3 id="staff-title">Staff of the Week</h3>
         <img src="person4.png" alt="Staff of the Week" class="staff-photo" />
         <p class="staff-name"><strong>Alina Grey</strong></p>
-        <p class="staff-thanks">Thank you for your incredible dedication and hard work!</p>
+        <p class="staff-thanks">Thank you for your incredible dedication and hard work! Your commitment to the mission and the positive impact you've made on the team and the community are truly inspiring. We appreciate all the time, energy, and passion you invest every day. You're an essential part of our success, and we are grateful for everything you do!</p>
     </div>
 </div>
 </div>
