--- a/index.html
+++ b/index.html
@@ -215,17 +215,19 @@
         <p id="missonstatment">At Loved Pets Animal Rescue, we believe all animals deserve a chance to find a loving forever home. We provide initial veterinary care to rescued animals, then work to match each animal with a human family to love them and keep them safe forever. All animals are screened for diseases upon arrival, washed and groomed, and then added to our website for adoptive families to see. All potential adoptive families are also screened for adoption history, household lifestyle, and commitment to providing a safe and loving home.</p>
     </section>
 
-    <section id="volunteer-info">
-        <h2 id="volunteer-info">How to Become a Volunteer</h2>
-        <p>We can always use volunteers to help keep our shelter open! Volunteers are needed to bathe and groom animals, play with pets to help them socialize and keep them happy, clean kennels and screening rooms, and help with administrative tasks in the office.</p>
-        <h3>Steps to become a volunteer:</h3>
-        <ol>
-            <li>Complete the online application</li>
-            <li>Submit the application by emailing it to <a href="mailto:volunteer@welovepets.com">volunteer@welovepets.com</a></li>
-            <li>Participate in a brief phone interview</li>
-            <li>Attend a volunteer training session on the first Saturday of every month</li>
-        </ol>
-    </section>
+   <div class="volunteer-section">
+  <h3 id="volunteer-title">How to Become a Volunteer</h3>
+  <p>We can always use volunteers to help keep our shelter open! Volunteers are essential in various roles such as bathing and grooming animals, playing with pets to help them socialize, cleaning kennels, screening rooms, and assisting with office tasks. Here's how you can join our team and make a positive impact:</p>
+  <br>
+  <ol>
+    <li><strong>Complete the online application:</strong> Fill out the application form on our website.</li>
+    <li><strong>Submit the application:</strong> Email the completed form to <a href="mailto:volunteer@welovepets.com">volunteer@welovepets.com</a>.</li>
+    <li><strong>Participate in a phone interview:</strong> After reviewing your application, we will schedule a brief phone interview to get to know you better.</li>
+    <li><strong>Attend a training session:</strong> Join our volunteer training on the first Saturday of every month to get prepared for your role.</li>
+  </ol>
+
+  <p class="volunteer-contact">For more details, please contact us at <a href="mailto:volunteer@welovepets.com">volunteer@welovepets.com</a>.</p>
+</div>
 
    <section id="cats">
     <h2>Cats Available for Adoption</h2>
