--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <p id="missonstatment">At Loved Pets Animal Rescue, we believe all animals deserve a chance to find a loving forever home. We provide initial veterinary care to rescued animals, then work to match each animal with a human family to love them and keep them safe forever. All animals are screened for diseases upon arrival, washed and groomed, and then added to our website for adoptive families to see. All potential adoptive families are also screened for adoption history, household lifestyle, and commitment to providing a safe and loving home.</p>
     </section>
 
-   <div class="volunteer-section">
+   <div class="volunteer-section" id="volunteer-info">
   <h3 id="volunteer-title">How to Become a Volunteer</h3>
   <p>We can always use volunteers to help keep our shelter open! Volunteers are essential in various roles such as bathing and grooming animals, playing with pets to help them socialize, cleaning kennels, screening rooms, and assisting with office tasks. Here's how you can join our team and make a positive impact:</p>
   <br>
