mission html separate

--- a/index.html
+++ b/index.html
@@ -211,8 +211,21 @@
 </section>
    <section id="philosophy">
     <h2>Our Mission</h2>
-        <p id="missonstatment">At Loved Pets Animal Rescue, we believe all animals deserve a chance to find a loving forever home. We provide initial veterinary care to rescued animals, then work to match each animal with a human family to love them and keep them safe forever. All animals are screened for diseases upon arrival, washed and groomed, and then added to our website for adoptive families to see. All potential adoptive families are also screened for adoption history, household lifestyle, and commitment to providing a safe and loving home.</p>
-    </section>
+    <p id="mission-statement">
+        At Loved Pets Animal Rescue, we believe all animals deserve a chance to find a loving forever home. 
+        We provide initial veterinary care to rescued animals, then work to match each animal with a human 
+        family to love them and keep them safe forever. All animals are screened for diseases upon arrival, 
+        washed and groomed, and then added to our website for adoptive families to see. All potential adoptive 
+        families are also screened for adoption history, household lifestyle, and commitment to providing a 
+        safe and loving home.
+    </p>
+    <div class="mission-images">
+        <img src="https://via.placeholder.com/200" alt="Mission Image 1">
+        <img src="https://via.placeholder.com/200" alt="Mission Image 2">
+        <img src="https://via.placeholder.com/200" alt="Mission Image 3">
+        <img src="https://via.placeholder.com/200" alt="Mission Image 4">
+    </div>
+</section>
 
    <div class="volunteer-section" id="volunteer-info">
   <h3 id="volunteer-title">How to Become a Volunteer</h3>
