--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
         safe and loving home.
     </p>
     <div class="mission-images">
-        <img src="https://via.placeholder.com/200" alt="Mission Image 1">
-        <img src="https://via.placeholder.com/200" alt="Mission Image 2">
-        <img src="https://via.placeholder.com/200" alt="Mission Image 3">
-        <img src="https://via.placeholder.com/200" alt="Mission Image 4">
+        <img src="dog_hug_2.jpg" alt="Mission Image 1">
+        <img src="vet_dog_ear.jpg" alt="Mission Image 2">
+        <img src="cats_three.jpg">
+        <img src="dog_patting.jpg" alt="Mission Image 4">
     </div>
 </section>
 
