--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
         safe and loving home.
     </p>
     <div class="mission-images">
-        <img src="dog_hug_2.jpg" alt="Mission Image 1">
-        <img src="vet_dog_ear.jpg" alt="Mission Image 2">
-        <img src="cats_three.jpg">
-        <img src="dog_patting.jpg" alt="Mission Image 4">
+        <img src="mission1.jpeg" >
+        <img src="vmission2.jpeg" >
+        <img src="mission3.jpeg">
+        <img src="mission4.jpeg">
     </div>
 </section>
 
