--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     </p>
     <div class="mission-images">
         <img src="mission1.jpeg" >
-        <img src="vmission2.jpeg" >
+        <img src="mission2.jpeg" >
         <img src="mission3.jpeg">
         <img src="mission4.jpeg">
     </div>
