--- a/index.html
+++ b/index.html
@@ -224,6 +224,9 @@
         <img src="mission2.jpeg" >
         <img src="mission3.jpeg">
         <img src="mission4.jpeg">
+        <img src="mission4.jpeg">
+        <img src="mission4.jpeg">
+        <img src="mission4.jpeg">
     </div>
 </section>
 
