--- a/index.html
+++ b/index.html
@@ -252,31 +252,61 @@
             <img src="cat1.png" alt="Cat 1">
             <h3>Cinnamon</h3>
             <p>Playful and affectionate.</p>
+            <div class="cat-details">
+                <p><strong>Breed:</strong> Tabby</p>
+                <p><strong>Age:</strong> 2 years</p>
+                <p><strong>Additional:</strong> Doesn’t like baths</p>
+            </div>
         </div>
         <div class="cat-box">
             <img src="cat2.png" alt="Cat 2">
             <h3>Bubbles</h3>
             <p>Loves quiet naps and snuggles.</p>
+            <div class="cat-details">
+                <p><strong>Breed:</strong> Persian</p>
+                <p><strong>Age:</strong> 4 years</p>
+                <p><strong>Additional:</strong> Prefers calm environments</p>
+            </div>
         </div>
         <div class="cat-box">
             <img src="cat3.png" alt="Cat 3">
             <h3>Mittens</h3>
             <p>Curious and adventurous.</p>
+            <div class="cat-details">
+                <p><strong>Breed:</strong> Maine Coon</p>
+                <p><strong>Age:</strong> 1 year</p>
+                <p><strong>Additional:</strong> Loves climbing</p>
+            </div>
         </div>
         <div class="cat-box">
             <img src="cat4.png" alt="Cat 4">
             <h3>Marshmallow</h3>
             <p>Sweet and gentle nature.</p>
+            <div class="cat-details">
+                <p><strong>Breed:</strong> Ragdoll</p>
+                <p><strong>Age:</strong> 3 years</p>
+                <p><strong>Additional:</strong> Great with kids</p>
+            </div>
         </div>
         <div class="cat-box">
             <img src="cat5.png" alt="Cat 5">
             <h3>Boots</h3>
             <p>Full of energy and mischief.</p>
+            <div class="cat-details">
+                <p><strong>Breed:</strong> Domestic Shorthair</p>
+                <p><strong>Age:</strong> 2 years</p>
+                <p><strong>Additional:</strong> Loves chasing toys</p>
+            </div>
         </div>
         <div class="cat-box">
             <img src="cat6.png" alt="Cat 6">
             <h3>Socks</h3>
             <p>Shy but loving once she warms up.</p>
+            <div class="cat-details">
+                <p><strong>Breed:</strong> Siamese</p>
+                <p><strong>Age:</strong> 5 years</p>
+                <p><strong>Additional:</strong> Needs a quiet home</p>
+            </div>
         </div>
     </div>
 </section>
