dog drop down text

--- a/index.html
+++ b/index.html
@@ -311,43 +311,58 @@
     </div>
 </section>
 
-  <section id="dogs">
-    <h2>Dogs Available for Adoption</h2>
-    <p>Location: NY</p>
-    <div class="dog-grid">
-        <div class="dog-box">
-            <img src="dog1.png" alt="Dog 1">
-            <h3>Coco</h3>
-            <p>Sweet and always by your side.</p>
-        </div>
-        <div class="dog-box">
+   <div class="dog-box">
             <img src="dog2.png" alt="Dog 2">
             <h3>Cupcake</h3>
             <p>Loyal and loves attention.</p>
+            <div class="dog-details">
+                <p><strong>Breed:</strong> Poodle</p>
+                <p><strong>Age:</strong> 2 years</p>
+                <p><strong>Additional:</strong> Hypoallergenic, great for families</p>
+            </div>
         </div>
         <div class="dog-box">
             <img src="dog3.png" alt="Dog 3">
             <h3>Buttons</h3>
             <p>Curious and loves to explore.</p>
+            <div class="dog-details">
+                <p><strong>Breed:</strong> Beagle</p>
+                <p><strong>Age:</strong> 1 year</p>
+                <p><strong>Additional:</strong> Has a keen sense of smell</p>
+            </div>
         </div>
         <div class="dog-box">
             <img src="dog4.png" alt="Dog 4">
             <h3>Peaches</h3>
             <p>Friendly, with a little sass.</p>
+            <div class="dog-details">
+                <p><strong>Breed:</strong> Dachshund</p>
+                <p><strong>Age:</strong> 4 years</p>
+                <p><strong>Additional:</strong> Prefers being the center of attention</p>
+            </div>
         </div>
         <div class="dog-box">
             <img src="dog5.png" alt="Dog 5">
             <h3>Twix</h3>
             <p>Gentle and loves belly rubs.</p>
+            <div class="dog-details">
+                <p><strong>Breed:</strong> Labrador</p>
+                <p><strong>Age:</strong> 5 years</p>
+                <p><strong>Additional:</strong> Great with kids and other pets</p>
+            </div>
         </div>
         <div class="dog-box">
             <img src="dog6.png" alt="Dog 6">
             <h3>Churro</h3>
             <p>Independent, but loves company.</p>
+            <div class="dog-details">
+                <p><strong>Breed:</strong> Shiba Inu</p>
+                <p><strong>Age:</strong> 2 years</p>
+                <p><strong>Additional:</strong> Enjoys quiet time and companionship</p>
+            </div>
         </div>
     </div>
 </section>
-  
     <section id="other">
     <h2>Bunnies & Birds Available for Adoption</h2>
     <p>Location: NY</p>
