fixing the code for the drop down

--- a/index.html
+++ b/index.html
@@ -311,7 +311,21 @@
     </div>
 </section>
 
-   <div class="dog-box">
+<section id="dogs">
+    <h2>Dogs Available for Adoption</h2>
+    <p>Location: NY</p>
+    <div class="dog-grid">
+        <div class="dog-box">
+            <img src="dog1.png" alt="Dog 1">
+            <h3>Coco</h3>
+            <p>Sweet and always by your side.</p>
+            <div class="dog-details">
+                <p><strong>Breed:</strong> Golden Retriever</p>
+                <p><strong>Age:</strong> 3 years</p>
+                <p><strong>Additional:</strong> Loves fetch and long walks</p>
+            </div>
+        </div>
+        <div class="dog-box">
             <img src="dog2.png" alt="Dog 2">
             <h3>Cupcake</h3>
             <p>Loyal and loves attention.</p>
