adding text for dropdown

--- a/index.html
+++ b/index.html
@@ -377,39 +377,69 @@
         </div>
     </div>
 </section>
-    <section id="other">
+ <section id="other">
     <h2>Bunnies & Birds Available for Adoption</h2>
     <p>Location: NY</p>
     <div class="other-grid">
         <div class="other-box">
-            <img src="bunny1.jpeg">
+            <img src="bunny1.jpeg" alt="Bunny 1">
             <h3>Biscuit</h3>
             <p>Hoppy and snuggly.</p>
+            <div class="other-details">
+                <p><strong>Species:</strong> Rabbit</p>
+                <p><strong>Age:</strong> 1 year</p>
+                <p><strong>Additional:</strong> Loves carrots and soft blankets</p>
+            </div>
         </div>
         <div class="other-box">
-            <img src="bunny2.jpeg">
+            <img src="bunny2.jpeg" alt="Bunny 2">
             <h3>Mat</h3>
             <p>Mischievous.</p>
+            <div class="other-details">
+                <p><strong>Species:</strong> Rabbit</p>
+                <p><strong>Age:</strong> 8 months</p>
+                <p><strong>Additional:</strong> Enjoys digging and exploring</p>
+            </div>
         </div>
         <div class="other-box">
-            <img src="bunny3.jpeg">
+            <img src="bunny3.jpeg" alt="Bunny 3">
             <h3>Maple</h3>
             <p>Playful little fluff.</p>
+            <div class="other-details">
+                <p><strong>Species:</strong> Rabbit</p>
+                <p><strong>Age:</strong> 2 years</p>
+                <p><strong>Additional:</strong> Prefers quiet environments</p>
+            </div>
         </div>
         <div class="other-box">
-            <img src="bird1.jpeg">
+            <img src="bird1.jpeg" alt="Bird 1">
             <h3>Chirpy</h3>
             <p>Perky and warm-hearted.</p>
+            <div class="other-details">
+                <p><strong>Species:</strong> Parakeet</p>
+                <p><strong>Age:</strong> 3 years</p>
+                <p><strong>Additional:</strong> Loves to sing in the mornings</p>
+            </div>
         </div>
         <div class="other-box">
-            <img src="bird2.jpeg">
+            <img src="bird2.jpeg" alt="Bird 2">
             <h3>Peep</h3>
             <p>Loving little chirper.</p>
+            <div class="other-details">
+                <p><strong>Species:</strong> Finch</p>
+                <p><strong>Age:</strong> 1 year</p>
+                <p><strong>Additional:</strong> Enjoys sunflower seeds</p>
+            </div>
         </div>
         <div class="other-box">
-            <img src="bird3.jpeg">
+            <img src="bird3.jpeg" alt="Bird 3">
             <h3>Sunny</h3>
             <p>Soft and chatty.</p>
+            <div class="other-details">
+                <p><strong>Species:</strong> Canary</p>
+                <p><strong>Age:</strong> 2 years</p>
+                <p><strong>Additional:</strong> Loves being in sunny spots</p>
+            </div>
         </div>
     </div>
 </section>
